--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
 <body>
     
     <header>
-        <section>       
+        <section class="container1">       
             <nav>
                 <video src="assets/inicio3.mp4" autoplay muted loop> 
                 </video>       
                 <ul>
                     <a href=""><img class="logo" src="assets/untitled1.png"></a>
-                    <li><a href="../index.html">INICIO</a></li>
+                    <li><a href="">INICIO</a></li>
                     <li><a href="page/Categorias.html">CATEGORIAS</a></li>
-                    <li><a href="pages/page2.html">AGREGADOS RECIENTEMENTE</a></li>
-                    <li><a href="pages/page3.html">NIÑOS</a></li>
+                    <li><a href="page/Agregados.html">AGREGADOS RECIENTEMENTE</a></li>
+                    <li><a href="page/Niños.html    ">NIÑOS</a></li>
                 </ul>
             </nav>
 
             <h1>AVENGERS: INFINITY WAR</h1>
-            <h2>Los Vengadores y los Guardianes de la Galaxia deben estar dispuestos a sacrificar todo en un intento de derrotar al poderoso Thanos antes de <br> que su bombardeo de devastación y ruina ponga fin al universo..<br>2018</h2>
-            <a href="#" class= "div" >VER MÁS..</a>
+            <h2>Los Vengadores y los Guardianes de la Galaxia deben estar dispuestos a sacrificar todo en un intento de derrotar al poderoso Thanos antes de <br> que su bombardeo de devastación y ruina ponga fin al universo..</h2>
+            <a href="page/Avengers.html" class= "div" >VER MÁS..</a>
+            <a href="#" class= "div1" >REPRODUCIR</a><img class="play1" src="assets/play.png">
         </section>
     </header>
         
