--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>AVENGERS: INFINITY WAR</h1>
             <h2>Los Vengadores y los Guardianes de la Galaxia deben estar dispuestos a sacrificar todo en un intento de derrotar al poderoso Thanos antes de <br> que su bombardeo de devastación y ruina ponga fin al universo..</h2>
             <a href="page/Avengers.html" class= "div" >VER MÁS..</a>
-            <a href="#" class="div1" target="_blank"> <img class="play1" src="assets/play.png">REPRODUCIR</a>
+            <a href="movies/avengersp.html" class="div1" target="_blank"> <img class="play1" src="assets/play.png">REPRODUCIR</a>
         </section>
     </header>
         
